# PotatoLib

./: CMakeLists.txt  cell.cpp  cell.h  cell2d.cpp  cell2d.h  complex_t.h  constant_element_2d.h  element.h  fmm.cpp  fmm.h  fmm2d.cpp  fmm2d.h  fmm2d_ada.cpp  fmm2d_ada.h  fmm_gmres_solver.cpp  fmm_gmres_solver.h  gmres.h  kernel.h  kernel_laplace_2d.cpp  kernel_laplace_2d.h  kernel_laplace_constant_element_2d.cpp  kernel_laplace_constant_element_2d.h  kernel_laplace_point_2d.cpp  kernel_laplace_point_2d.h  main.cpp  point.cpp  point.h  point_element.h  tree.cpp  tree.h  tree2d.cpp  tree2d.h  tree2d_ada.cpp  tree2d_ada.h
TESTING/: create_data.py  create_data_circle.py  create_data_high_non_uni1.py  create_data_spiro.py  create_element_data.py  test_complex.cpp
TESTING/render_images/: Pot_Elem.pde  Pot_Point.pde  render_images.pde
